# Medea

./: build_files.sh  pyproject.toml  vercel.json
main/: requirements.txt  vercel.json
main/files/: apps.py  encryption.py  models.py  urls.py  utils.py  views.py
main/files/migrations/: 0001_initial.py
main/images/: apps.py  encryption.py  external_ops.py  file_upload.py  models.py  serializers.py  timers.py  urls.py  utils.py  views.py
main/images/migrations/: 0001_initial.py  0002_alter_images_post_id.py
main/main/: settings.py  urls.py  views.py  wsgi.py
main/static/styles/: 404.css  file.css  styles.css  user.css
main/templates/: 404.html  download.html  file_upload.html  header.html  home.html  image_upload.html  main.html  upload.html  user.html
